fix for bz868081 and switch to word-break:normal so words aren't broken at wrap

--- a/console/app/assets/stylesheets/_code.scss
+++ b/console/app/assets/stylesheets/_code.scss
@@ -23,7 +23,7 @@ code {
 // Blocks of code
 pre {
   display: block;
-  padding: $baseLineHeight / 2;
+  padding: $baseLineHeight / 2 $baseLineHeight;
   margin: 0 0 $baseLineHeight;
   line-height: $baseLineHeight;
   background-color: #f5f5f5;
@@ -32,7 +32,7 @@ pre {
   @include border-radius(4px);
   white-space: pre;
   white-space: pre-wrap;
-  word-break: break-all;
+  word-break: normal;
   word-wrap: break-word;
 
   // Make prettyprint styles more spaced out for readability
